[MacViews] Fix for disabled submenu items in textfield context menu

Bug: 832631
Change-Id: I211b693337c93a53fabd5aacd41bc4024cefc7c2
Reviewed-on: https://chromium-review.googlesource.com/1013877
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551153}
Former-commit-id: 639c091c17ba822e4335546fb3d474945430060c